[package]
name = "tree-sitter-ursa"
description = "Ursa grammar for the tree-sitter parsing library"
version = "1.0.3"
keywords = ["incremental", "parsing", "Ursa"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ursalang/tree-sitter-ursa"
homepage = "https://ursalang.github.io"
documentation = "https://github.com/ursalang/tree-sitter-ursa"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
